# bifrost-docs

./: .env.example  PLAN.md  TODO.md  astro.config.mjs  build.sh  debug.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json  setup.sh  state.id_map.json  state.json  test.sh
api/: Dockerfile  Dockerfile.test  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 018_add_metadata_columns.py  019_add_interfaces_to_configurations.py  20260112_000000_initial_auth_tables.py  20260112_001000_add_passwords_table.py  20260112_002000_add_configurations_tables.py  20260112_003000_add_locations_table.py  20260112_004000_add_documents_table.py  20260112_005000_add_attachments_table.py  20260112_006000_add_custom_assets.py  20260112_007000_add_relationships_table.py  20260112_008000_add_embedding_index.py  20260112_009000_make_types_global.py  20260112_011000_add_ai_settings_table.py  20260112_012000_add_oauth_sso_tables.py  20260113_000000_add_user_role.py  20260113_001000_add_exports_table.py  20260113_002000_add_is_active_to_types.py  20260113_003000_add_user_preferences_table.py  20260113_004000_add_totp_to_passwords.py  20260113_005000_remove_user_org_scoping.py  20260114_130015_add_is_enabled_to_entities.py  20260114_140000_add_sort_order_to_custom_asset_types.py  20260114_150000_add_indexing_enabled_to_ai_settings.py  20260114_160000_custom_assets_display_field.py  20260115_034641_drop_ai_settings_table.py  20260115_170000_add_updated_by_user_id.py  20260115_171000_create_audit_logs_table.py  20260116_100000_add_audit_log_view_index.py  20260126_001000_cleanup_disabled_from_index.py
api/docs/: api-documentation.md
api/scripts/: __init__.py  init_container.py  migrate_to_markdown.py
api/src/: __init__.py  config.py  main.py  worker.py
api/src/core/: auth.py  cache.py  database.py  pubsub.py  security.py
api/src/models/: __init__.py  enums.py
api/src/repositories/: __init__.py  access_tracking.py  api_key.py  attachment.py  audit.py  base.py  configuration.py  configuration_status.py  configuration_type.py  custom_asset.py  custom_asset_type.py  document.py  export.py  location.py  organization.py  password.py  relationship.py  system_config.py  user.py  user_preferences.py
api/src/routers/: __init__.py  admin.py  ai_settings.py  api_keys.py  attachments.py  audit.py  auth.py  configuration_statuses.py  configuration_types.py  configurations.py  custom_asset_types.py  custom_assets.py  documents.py  exports.py  global_view.py  health.py  locations.py  me.py  mfa.py  oauth_config.py  oauth_sso.py  organizations.py  passkeys.py  passwords.py  preferences.py  relationships.py  search.py  websocket.py
api/src/services/: ai_chat.py  asset_mutations.py  audit_service.py  custom_asset_validation.py  document_mutations.py  embeddings.py  entity_resolver.py  export_service.py  file_storage.py  indexing_queue.py  oauth_config_service.py  oauth_sso.py  passkey_service.py  reindex_state.py  search_indexing.py
api/tests/: __init__.py  conftest.py
api/tests/integration/: test_attachments.py  test_auth.py  test_configurations.py  test_custom_assets.py  test_documents.py  test_exports.py  test_locations.py  test_mutation_flow.py  test_pagination.py  test_passwords.py  test_preferences.py  test_relationships.py  test_roles.py  test_search.py  test_search_mutations.py  test_show_disabled.py  test_soft_delete.py
api/tests/routers/: test_websocket_mutations.py
client/: Dockerfile  (+9 more)
tools/itglue-migrate/: pyproject.toml
(+376 files in other folders)
