[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost-docs"
version = "1.0.0"
description = "BifrostDocs Documentation Platform API"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "pgvector>=0.3.0",
    # Security
    "pyjwt>=2.8.0",
    "pwdlib[bcrypt]>=0.2.0",
    "cryptography>=42.0.0",
    # Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    # Redis & Job Queue
    "redis>=5.0.0",
    "arq>=0.26.0",
    # HTTP Client
    "httpx>=0.27.0",
    # WebAuthn/Passkeys
    "webauthn>=2.0.0",
    # TOTP
    "pyotp>=2.9.0",
    "qrcode>=7.4.0",
    # S3/MinIO Storage
    "boto3>=1.34.0",
    "aiobotocore>=2.13.0",
    # OpenAI (for embeddings and chat)
    "openai>=1.50.0",
    # Anthropic (for Claude models)
    "anthropic>=0.40.0",
    # HTML to Markdown conversion
    "markdownify>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.350",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".git", "alembic"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
